# sui-transfer

./: .gitignore  Cargo.toml  README.md  fleet.toml
.cargo/: config.toml
20221118/: data1668327566423.txt  data1668327577266.txt  data1668327590904.txt  data1668327604798.txt  data1668327617295.txt  data1668327627620.txt  data1668327636317.txt  data1668327646602.txt  data1668327657768.txt  data1668327668119.txt  data1668327677491.txt  data1668327688188.txt  data1668327698785.txt  data1668327714198.txt  data1668327740362.txt  data1668327749436.txt  data1668327760517.txt  data1668327770178.txt  data1668327782183.txt  data1668327792934.txt  data1668327804541.txt  data1668327815274.txt  data1668327825963.txt  data1668327836172.txt  data1668327847856.txt  data1668327858224.txt  data1668327868306.txt  data1668327878114.txt  data1668327889441.txt  data1668327900486.txt  data1668327909701.txt  data1668327921449.txt  data1668327931660.txt  data1668327940449.txt  data1668327950388.txt  data1668327960451.txt  data1668327970643.txt  data1668327982508.txt  data1668327993816.txt  data1668328004470.txt  (+2260 more)
src/: main.rs
